refactor(json-cache): 替换轻量级 LRU 缓存为 ConcurrentHashMap 实现
- 放弃基于 LinkedHashMap 和 StampedLock 的 access-order LRU 缓存设计
- 使用 ConcurrentHashMap 实现线程安全的近似 LRU 软引用缓存策略
- 简化并发控制，避免乐观读数据竞争和锁操作开销
- 超出缓存大小时遍历删除第一个元素，保证缓存大小限制
- 同步更新非软引用的普通 LRU 缓存实现，提升性能和可靠性

fix(json-asm): 调整 ASM ClassWriter 标志和 visitMaxs 参数

- 将 ASM_FLAGS 由 COMPUTE_FRAMES 改为 COMPUTE_MAXS，避免 ASM 9.8 版本的异常
- mv.visitMaxs 参数由具体数值改为 (0, 0)，减少手动指定栈和局部变量大小错误风险
- 保留 TODO 注释，提示后续升级和修复方案以恢复 COMPUTE_FRAMES 避免 JVM VerifyError

docs(cronjob): 优化 JobWebhookMapper 接口文档注释

- 详细说明按照事件类型查询活跃 WebHook 的业务逻辑和返回保证
- 新增查询按事件类型和任务 KEY 过滤的活跃 WebHook 说明
- 强调全局 WebHook 处理逻辑，保证专属和全局回调均生效

chore(json-type): 废弃 JsonTypeCode 枚举声明

- 标记 JsonTypeCode 枚举为 @Deprecated，指出与 ASM 编码生成主逻辑不一致
- 预告后续统一类型码重构完成后移除此死代码部分